# CloudScope

./: .env.example  .gitignore  .gitleaks.toml  .pylintrc  .release-please-config.json  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.MD  SECURITY.md  app.py  commitlint.config.js  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: commitlint.yml  conventional-commits.yml  lint-format.yml  pylint.yml  release.yml  secret-scan.yml  test.yml
api/: .env.example  Dockerfile  app.py  aws_classes.py  cache.py  database.py  extensions.py  main.py  models.py  requirements.txt  routes.py  schemas.py  utils.py  version.py
api/helpers/: __init__.py  profile_helpers.py
api/migrations/: Dockerfile  alembic.ini  env.py  init.sql  wait-for-db.sh
api/routers/: profiles.py  resources.py
docs/: ENV_AND_CONFIG.md  IMPROVEMENT_PLAN.md  REACT_MIGRATION_PLAN.md  aws_roles.md
frontend/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
scripts/: check-api.sh
src/: aws_classes.py  models.py  version.py
static/css/: style.css
templates/: base.html.j2  dashboard.html.j2  error.html.j2  profiles.html.j2  settings.html.j2
tests/: __init__.py  conftest.py  test_app.py  test_aws_classes.py
ui/: Dockerfile  app.py  requirements.txt
ui/templates/: alb.html.j2  base.html.j2  dashboard.html.j2  dynamodb.html.j2  ec2.html.j2  error.html.j2  index.html.j2  lambda.html.j2  loading.html.j2  networks.html.j2  profiles.html.j2  (+3 more)
(+35 files in other folders)
